bench/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cwa-bench-viewer
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
